--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,33 +1,128 @@
 <!DOCTYPE html>
 <html style="width: 100%;height: 100%">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no"> 
-<title>UAV</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <title>UAV</title>
 </head>
 
 <style type="text/css">
-#container {width:100%; height: 100%; }
+    #container {
+        width: 100%;
+        height: 100%;
+    }
 </style>
 
 <body style="width: 100%;height: 100%">
-    <div id="container"></div> 
+<div id="container"></div>
 </body>
 
 <script type="text/javascript">
-        window._AMapSecurityConfig = {
-            securityJsCode:'c33e4852416216f320768c7aed02e1a3',
-        }
+    window._AMapSecurityConfig = {
+        securityJsCode: 'c33e4852416216f320768c7aed02e1a3',
+    }
 </script>
-<script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=1229ea463b2abeb3b2622717cade9cf3"></script> 
+<script type="text/javascript"
+        src="https://webapi.amap.com/maps?v=1.4.15&key=1229ea463b2abeb3b2622717cade9cf3"></script>
+
 
 <script type="text/javascript">
-        
-		 
-		   var map = new AMap.Map('container', {
-        zoom:11,//级别
-        center: [116.397428, 39.90923],//中心点坐标
-        viewMode:'3D'//使用3D视图
+
+    var map = new AMap.Map('container', {
+        zoom: 16,//级别
+        resizeEnable: true,
+        // center: [currentLatitude, currentLongitude],//中心点坐标
+        viewMode: '3D'//使用3D视图
     });
+
+    var marker = new AMap.Marker({
+        map: map,
+        position: [116.478935, 39.997761],
+        icon: "http://47.99.121.32:8080/uav_dispatch/fly.png",
+        offset: new AMap.Pixel(-26, -13),
+        autoRotation: true,
+        angle: -90,
+    });
+
+    var passedPolyline = new AMap.Polyline({
+        map: map,
+        path: [],
+        strokeColor: "#ff0000",  //线颜色
+        // strokeOpacity: 1,     //线透明度
+        strokeWeight: 6,      //线宽
+        // strokeStyle: "solid"  //线样式
+    });
+    marker.on('moving', function (e) {
+        var passedPolyline = new AMap.Polyline({
+            map: map,
+            path: [],
+            strokeColor: "#ff0000",  //线颜色
+            // strokeOpacity: 1,     //线透明度
+            strokeWeight: 6,      //线宽
+            // strokeStyle: "solid"  //线样式
+        });
+        passedPolyline.setPath(e.passedPath);
+    });
+
+
+</script>
+
+<script>
+    var socket;
+    var firstReceveMeg = false;
+
+    function openSocket() {
+        if (typeof(WebSocket) == "undefined") {
+            console.log("您的浏览器不支持WebSocket");
+        } else {
+            console.log("您的浏览器支持WebSocket");
+            //实现化WebSocket对象，指定要连接的服务器地址与端口  建立连接
+            var uid = navigator.appName;
+            var socketUrl = "ws://47.99.121.32:8080/uav_dispatch/websocket/" + uid;
+            console.log(socketUrl);
+            if (socket != null) {
+                socket.close();
+                socket = null;
+            }
+            socket = new WebSocket(socketUrl);
+            //打开事件
+            socket.onopen = function () {
+                console.log("websocket已打开");
+            };
+            //获得消息事件
+            socket.onmessage = function (msg) {
+                var serverMsg = "收到服务端信息：" + msg.data;
+                console.log(serverMsg);
+                draw(msg);
+                firstReceveMeg = true;
+            };
+            //关闭事件
+            socket.onclose = function () {
+                console.log("websocket已关闭");
+            };
+            //发生了错误事件
+            socket.onerror = function () {
+                console.log("websocket发生了错误");
+            }
+        }
+    }
+
+    openSocket();
+
+    function draw(msg) {
+
+        // 转化为经纬度
+        var jsonData = JSON.parse(msg.data);
+
+        // 判断是否需要重置初始位置
+        if (!firstReceveMeg) {
+            marker.setPosition(new AMap.LngLat(jsonData.longitude, jsonData.latitude))
+        } else {
+            marker.moveTo(new AMap.LngLat(jsonData.longitude, jsonData.latitude), 200);
+        }
+        // 缩放地图到合适的视野级别
+        map.setFitView()
+    }
+
 </script>
 </html>
